crates/interpreter/src/snapshots/submilli_engine__lexer__tests__renders_bare_exponent_diagnostic.snap
---
source: crates/interpreter/src/lexer.rs
expression: rendered
---
error: missing digits in exponent
 --> script.subm:1:2
  |
1 | 1e
  |  ^
