crates/interpreter/src/snapshots/submilli_engine__lexer__tests__renders_unterminated_template_diagnostic.snap
---
source: crates/interpreter/src/lexer.rs
expression: rendered
---
error: unterminated template literal
 --> script.subm:1:9
  |
1 | let s = `hello
  |         ^^^^^^
