crates/interpreter/src/snapshots/submilli_engine__lexer__tests__tokenize_mvp_fixture.snap
---
source: crates/interpreter/src/lexer.rs
expression: kinds
---
[
    "Function",
    "Identifier",
    "LeftParen",
    "Identifier",
    "Colon",
    "Identifier",
    "RightParen",
    "Colon",
    "Identifier",
    "LeftBrace",
    "Newline",
    "Return",
    "StringLiteral(\"Hello, \")",
    "Plus",
    "Identifier",
    "Semicolon",
    "Newline",
    "RightBrace",
    "Newline",
    "Newline",
    "Function",
    "Identifier",
    "LeftParen",
    "RightParen",
    "Colon",
    "Identifier",
    "LeftBrace",
    "Newline",
    "Const",
    "Identifier",
    "Equals",
    "Identifier",
    "LeftParen",
    "StringLiteral(\"world\")",
    "RightParen",
    "Semicolon",
    "Newline",
    "Identifier",
    "Dot",
    "Identifier",
    "LeftParen",
    "Identifier",
    "RightParen",
    "Semicolon",
    "Newline",
    "Identifier",
    "LeftParen",
    "Identifier",
    "EqEqEq",
    "StringLiteral(\"Hello, world\")",
    "Comma",
    "StringLiteral(\"greeting should match\")",
    "RightParen",
    "Semicolon",
    "Newline",
    "Return",
    "Identifier",
    "Semicolon",
    "Newline",
    "RightBrace",
    "Newline",
    "Eof",
]
